crates/ods-cli/tests/snapshots/state_run__explain_failure_model_plain.snap
---
source: crates/ods-cli/tests/state_run.rs
expression: redact(plain.trim_end())
---
run: <run>
scope: jaffle_ods/default

Why it failed

customers failed
what: A column this model reads doesn't exist
kind: database error · missing column
confidence: known pattern

why ODS thinks so
  It failed after 250ms, during execution (compile succeeded).  [run stats]

where: models/marts/customers.sql  reported at line 25 of the code it ran · compiled: target/compiled/jaffle_ods/models/marts/customers.sql
impact: blocks 3 downstream nodes (customer_segments, customers_snapshot_view, segment_summary were skipped). Their last good builds are kept.

dbt said: Binder Error: Values list [value removed] does not have a column named [value removed]  Literal values and SQL removed.
full text: dbt's log file (logs/dbt.log in the project, unless --log-path)
