crates/ods-cli/tests/snapshots/state_run__failure_explained_json.snap
---
source: crates/ods-cli/tests/state_run.rs
expression: "redact(&serde_json::to_string_pretty(&stable).unwrap())"
---
{
  "schema_version": {
    "major": 1,
    "minor": 0
  },
  "node": "model.jaffle_ods.customers",
  "category": "database",
  "symptom": "missing_column",
  "confidence": "known_pattern",
  "pattern": {
    "catalogue": "dbt",
    "version": "1",
    "id": "duckdb-values-list-column"
  },
  "headline": "A column this model reads doesn't exist",
  "evidence": [
    {
      "source": "run_stats",
      "text": "<took>",
      "confirms": false
    },
    {
      "source": "fingerprint",
      "text": "Its code changed since its last successful build (sql), in run `<first run>`.",
      "confirms": false
    }
  ],
  "location": {
    "file": "models/marts/customers.sql",
    "compiled_file": "target/compiled/jaffle_ods/models/marts/customers.sql",
    "reported_line": 25
  },
  "suggestions": [
    {
      "text": "Then retry what failed:",
      "commands": [
        "ods state retry --failed --state-db <project>/.ods/state.db"
      ]
    }
  ],
  "impact": {
    "blocked": [
      "model.jaffle_ods.customer_segments",
      "model.jaffle_ods.customers_snapshot_view",
      "model.jaffle_ods.segment_summary"
    ],
    "kept": [
      "model.jaffle_ods.customer_segments",
      "model.jaffle_ods.customers_snapshot_view",
      "model.jaffle_ods.segment_summary"
    ]
  },
  "engine_message": {
    "engine": "dbt",
    "kind": "Binder Error",
    "message": "Binder Error: Values list [value removed] does not have a column named [value removed]",
    "details_at": "dbt's log file (logs/dbt.log in the project, unless --log-path)"
  }
}
