crates/ods-cli/tests/snapshots/state_run__failure_explained_plain.snap
---
source: crates/ods-cli/tests/state_run.rs
expression: redact(&section)
---
Why it failed

customers failed
what: A column this model reads doesn't exist
kind: database error · missing column
confidence: known pattern

why ODS thinks so
  It failed after <took>, during execution (compile succeeded).  [run stats]
  Its code changed since its last successful build (sql), in run <first run>.  [fingerprints]
  It failed the same way in 1 of its last 2 runs.  [run history]

where: models/marts/customers.sql  reported at line 25 of the code it ran · compiled: target/compiled/jaffle_ods/models/marts/customers.sql
impact: blocks 3 downstream nodes (customer_segments, customers_snapshot_view, segment_summary were skipped). Their last good builds are kept.

what to try
  1. Then retry what failed:
    $ ods state retry --failed --state-db <project>/.ods/state.db

dbt said: Binder Error: Values list [value removed] does not have a column named [value removed]  Literal values and SQL removed.
full text: dbt's log file (logs/dbt.log in the project, unless --log-path)
