crates/ods-cli/tests/snapshots/state_run__missing_profile_json.snap
---
source: crates/ods-cli/tests/state_run.rs
expression: "serde_json::to_string_pretty(failure).unwrap()"
---
{
  "schema_version": {
    "major": 1,
    "minor": 3
  },
  "node": "project",
  "category": "configuration",
  "symptom": "profile_not_found",
  "confidence": "known_pattern_with_evidence",
  "pattern": {
    "catalogue": "dbt",
    "version": "8",
    "id": "dbt-profile-not-found"
  },
  "headline": "The profile or target isn't defined",
  "evidence": [
    {
      "source": "doctor",
      "text": "Check `config.resolution` (warning): no `profiles.yml` in the profiles directory `profiles` (flag): dbt finds no profile there. dbt's `profiles_dir` `profiles` (`flag`), `profile` `analytics` (`flag`), `target` unset (dbt's default).",
      "confirms": true,
      "data": {
        "kind": "doctor_check",
        "check": "config.resolution",
        "status": "warning"
      }
    },
    {
      "source": "doctor",
      "text": "Check `config.load` (ok): no configuration file: built-in defaults apply.",
      "confirms": false,
      "data": {
        "kind": "doctor_check",
        "check": "config.load",
        "status": "ok"
      }
    },
    {
      "source": "run_stats",
      "text": "It failed while the project was compiled, before anything ran.",
      "confirms": false
    }
  ],
  "suggestions": [
    {
      "text": "Check that dbt can connect with this profile:",
      "commands": [
        "dbt debug"
      ]
    },
    {
      "text": "Check the profile, target and credentials ODS and the engine use:",
      "commands": [
        "ods doctor"
      ]
    },
    {
      "text": "Then run the same command again: nothing was built or recorded."
    }
  ],
  "engine_message": {
    "engine": "dbt",
    "kind": "Runtime Error",
    "message": "Could not find profile named [value removed]",
    "details_at": "dbt's log file (logs/dbt.log in the project, unless --log-path)"
  }
}
