crates/ods-cli/tests/snapshots/state_run__missing_ref_json.snap
---
source: crates/ods-cli/tests/state_run.rs
expression: "serde_json::to_string_pretty(failure).unwrap()"
---
{
  "schema_version": {
    "major": 1,
    "minor": 2
  },
  "node": "project",
  "category": "dependency",
  "symptom": "missing_ref",
  "confidence": "known_pattern",
  "pattern": {
    "catalogue": "dbt",
    "version": "3",
    "id": "dbt-missing-ref"
  },
  "headline": "The model refers to a node the project doesn't have",
  "evidence": [
    {
      "source": "run_stats",
      "text": "It failed while the project was compiled, before anything ran.",
      "confirms": false
    }
  ],
  "suggestions": [
    {
      "text": "Did you mean `customers`? The project has a node with a name close to the missing one; that is a guess from the names, not evidence of a typo."
    },
    {
      "text": "Check the names the model refers to against the project's nodes."
    },
    {
      "text": "Then run the same command again: nothing was built or recorded."
    }
  ],
  "engine_message": {
    "engine": "dbt",
    "kind": "Compilation Error",
    "message": "Model [value removed] (models/marts/broken.sql) depends on a node named [value removed] which was not found",
    "details_at": "dbt's log file (logs/dbt.log in the project, unless --log-path)"
  }
}
